--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
 
         </ul>
 
-        <a href="#" class="btn btn-secondary">Booking Now</a>
+        <a  class="btn btn-secondary" href=./index2.html>Booking Now</a>
 
       </nav>
 
@@ -607,7 +607,7 @@
 
             </ul>
 
-            <a href="#" class="btn btn-primary">Booking Now</a>
+            <a class="btn btn-primary". href=./index2.html >Booking Now </a>
 
           </div>
 
