--- a/html/index.html
+++ b/html/index.html
@@ -192,7 +192,7 @@
                 <div class="card-content">
                   <p class="card-subtitle"></p>
 
-                  <h3 class="h3 card-title">Kairawen</h3>
+                  <h3 class="h3 card-title">Kairouan</h3>
                 </div>
 
               </a>
@@ -659,7 +659,7 @@
 
                     <div class="author-wrapper">
                       <figure class="author-avatar">
-                        <img src="./assets/images/author-avatar.png" width="30" height="30" alt="Jony bristow">
+                        <img src="../images/people-1.jpg" width="30" height="30" alt="Jony bristow">
                       </figure>
 
                       <div>
@@ -696,7 +696,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="../images/jerba.jpg" width="740" height="518" loading="lazy"
+                    <img src="../images/croco.jpg" width="740" height="518" loading="lazy"
                       alt="A good traveler has no fixed plans and is not intent on arriving." class="img-cover">
                   </a>
 
@@ -714,11 +714,11 @@
 
                     <div class="author-wrapper">
                       <figure class="author-avatar">
-                        <img src="./assets/images/author-avatar.png" width="30" height="30" alt="Jony bristow">
+                        <img src="../images/people-2.jpg" width="30" height="30" alt="Jony bristow">
                       </figure>
 
                       <div>
-                        <a href="#" class="author-name">Paul</a>
+                        <a href="#" class="author-name">Sarrah</a>
 
                         <p class="author-title">User</p>
                       </div>
@@ -753,7 +753,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/blog-3.jpg" width="740" height="518" loading="lazy"
+                    <img src="../images/starwars.jpg" width="740" height="518" loading="lazy"
                       alt="A good traveler has no fixed plans and is not intent on arriving." class="img-cover">
                   </a>
 
@@ -771,13 +771,13 @@
 
                     <div class="author-wrapper">
                       <figure class="author-avatar">
-                        <img src="./assets/images/author-avatar.png" width="30" height="30" alt="Jony bristow">
+                        <img src="../images/people-3.jpg" width="30" height="30" alt="Jony bristow">
                       </figure>
 
                       <div>
-                        <a href="#" class="author-name">Jony bristow</a>
+                        <a href="#" class="author-name">Jonnathan</a>
 
-                        <p class="author-title">Admin</p>
+                        <p class="author-title">User</p>
                       </div>
                     </div>
 
@@ -787,7 +787,7 @@
 
                   <h3 class="card-title">
                     <a href="#">
-                      A good traveler has no fixed plans and is not intent on arriving.
+                      I'm a star wars fan and when i visited it was wonderful i hope i get to tunisia one day.
                     </a>
                   </h3>
 
