--- a/html/index2.html
+++ b/html/index2.html
@@ -94,7 +94,7 @@
 					<input type="password" id="password confirmation" placeholder="confirm password" />
 					<small>Error Message</small>
 				</div>
-				<button type="submit">Submit</button>
+				<button type="submit" href=../html3.html>Submit</button>
 			</form>
 			<div class="drops">
 				<div class="drop drop-1" style="--i: 0"></div>
