--- a/html/index2.html
+++ b/html/index2.html
@@ -94,7 +94,11 @@
 					<input type="password" id="password confirmation" placeholder="confirm password" />
 					<small>Error Message</small>
 				</div>
-				<button type="submit" href=../html3.html>Submit</button>
+				<a href="../html/html3.html">
+					<button type="submit" >Submit</button>
+				</a>
+				
+				
 			</form>
 			<div class="drops">
 				<div class="drop drop-1" style="--i: 0"></div>
@@ -104,6 +108,6 @@
 				<div class="drop drop-5" style="--i: 4"></div>
 			</div>
 		</div>
-		<script src="../js/mainjs2.js"></script>
+		<script src="../js/mainjs2.js"></scrip>
 	</body>
 </html>
