--- a/html/index.html
+++ b/html/index.html
@@ -51,23 +51,23 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="" class="navbar-link">  Home</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About Us</a>
+            <a href="#ab" class="navbar-link">About Us</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Tours</a>
+            <a href="#Tr" class="navbar-link">Tours</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Destinations</a>
+            <a href="#dest" class="navbar-link">Destinations</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="#Bl" class="navbar-link">Blog</a>
           </li>
 
           <li>
@@ -141,7 +141,7 @@
       <section class="section destination">
         <div class="container">
 
-          <p class="section-subtitle">Destinations</p>
+          <p class="section-subtitle"  id="dest" >Destinations></p>
 
           <h2 class="h2 section-title">Choose Your Place</h2>
 
@@ -248,7 +248,7 @@
       <section class="section popular">
         <div class="container">
 
-          <p class="section-subtitle">Featured Tour in the winter</p>
+          <p class="section-subtitle" id="Tr">Featured Tour in the winter</p>
 
           <h2 class="h2 section-title">Most Popular Tours</h2>
 
@@ -547,7 +547,7 @@
 
           <div class="about-content">
 
-            <p class="section-subtitle">About Us</p>
+            <p class="section-subtitle" id="ab">About Us</p>
 
             <h2 class="h2 section-title">Explore all tour of the world with us.</h2>
 
@@ -629,7 +629,7 @@
       <section class="section blog">
         <div class="container">
 
-          <p class="section-subtitle">From The Blog Post</p>
+          <p class="section-subtitle" id="Bl">From The Blog Post</p>
 
           <h2 class="h2 section-title">Latest News & Reviews</h2>
 
